Fixed date picker being behind the map/sidebar

--- a/css/main.css
+++ b/css/main.css
@@ -154,3 +154,7 @@ td.chatinputtable {
 {
     color: red;
 }
+
+.md-datepicker-calendar-pane {
+    z-index: 3000 !important;
+}
